2013-01-04  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* hg/CMakeLists.txt: In commented hg-test executable target,
	also statically link against nasl (because of
	nasl*ssh_internal_close).

2012-12-28  Henri Doreau <henri.doreau@greenbone.net>

	* base/cvss.c (get_cvss_score_from_base_metrics): Check for
	a valid toenum() return value.

2012-12-27  Henri Doreau <henri.doreau@greenbone.net>

	Refactored code to match the project's coding standards.

	* base/cvss.c (toenum, get_impact_subscore)
	(get_exploitability_subscore, get_cvss_score_from_base_metrics):
	Reworked code to use the new struct cvss and impact_item table.
	Numerous style fixes.
	(set_impact_from_str, __get_cvss_score): New.

	* base/cvss.h: Updated headers accordingly.

2012-12-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	*  nasl/nasl_scanner_glue.c (script_tag): Ignore tags setting
	a risk_factor. It will therefore not be stored in nvti
	files and not transferred via OTP.

2012-12-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	*  nasl/nasl_scanner_glue.c (script_see_also): Removed. It was
	marked unused anyway and will not be used in the future.

	* nasl/nasl_scanner_glue.h: Remove proto accordingly.

2012-12-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* base/nvti.c (nvti_free): Don't free risk factor anymore.
	(nvti_risk_factor): Compute the risk factor based on cvss.
	(nvti_set_risk_factor): Removed.
	(nvti_clone): Don't clone risk factor anymore.

	* base/nvti.h: Removed proto accordingly.
	(struct nvti): Removed element risk_factor.

2012-12-18  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* COPYING: Added cvss module.

	* base/cvss.c (cvss_as_str): New.

	* base/cvss.h: Added proto accordingly.

2012-12-17  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/nasl_scanner_glue.c (security_message): Directly retrieve
	the cvss value from the NVTI meta data when there is no parameter
	given.
